fix: added missing refraction reference

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,8 @@ src/style.css
 Makabaka1880, 2025. All rights reserved.
 */
 
+@import url('padding.css');
+
 html {
     scroll-behavior: smooth;
 }
