--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ Makabaka1880, 2025. All rights reserved.
 
 @import url('padding.css');
 @import url('palette.css');
+@import url('controls.css');
 
 html {
     scroll-behavior: smooth;
@@ -56,6 +57,6 @@ hr {
     margin: 20px auto;
 }
 
-html {
+/* html {
     filter: grayscale(100);
-}
+} */
