--- a/src/style/style.css
+++ b/src/style/style.css
@@ -19,7 +19,7 @@ html {
 a {
     text-decoration: none;
     color: black;
-    transition: color 0.3s, transform 0.3s;
+    transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
 a:hover {
