--- a/src/style/padding.css
+++ b/src/style/padding.css
@@ -19,94 +19,94 @@ Makabaka1880, 2025. All rights reserved.
 
 /* Horizontal Padding */
 
-.padding-h-xs {
-    padding-left: var(--spacing-xs);
-    padding-right: var(--spacing-xs);
+.margin-h-xs {
+    margin-left: var(--spacing-xs);
+    margin-right: var(--spacing-xs);
 }
 
-.padding-h-sm {
-    padding-left: var(--spacing-sm);
-    padding-right: var(--spacing-sm);
+.margin-h-sm {
+    margin-left: var(--spacing-sm);
+    margin-right: var(--spacing-sm);
 }
 
-.padding-h-md {
-    padding-left: var(--spacing-md);
-    padding-right: var(--spacing-md);
+.margin-h-md {
+    margin-left: var(--spacing-md);
+    margin-right: var(--spacing-md);
 }
 
-.padding-h-lg {
-    padding-left: var(--spacing-lg);
-    padding-right: var(--spacing-lg);
+.margin-h-lg {
+    margin-left: var(--spacing-lg);
+    margin-right: var(--spacing-lg);
 }
 
-.padding-h-xl,
-.padding-h {
-    padding-left: var(--spacing-xl);
-    padding-right: var(--spacing-xl);
+.margin-h-xl,
+.margin-h {
+    margin-left: var(--spacing-xl);
+    margin-right: var(--spacing-xl);
 }
 
 /* Vertical Padding */
 
-.padding-v-xs {
-    padding-top: var(--spacing-xs);
-    padding-bottom: var(--spacing-xs);
+.margin-v-xs {
+    margin-top: var(--spacing-xs);
+    margin-bottom: var(--spacing-xs);
 }
 
-.padding-v-sm {
-    padding-top: var(--spacing-sm);
-    padding-bottom: var(--spacing-sm);
+.margin-v-sm {
+    margin-top: var(--spacing-sm);
+    margin-bottom: var(--spacing-sm);
 }
 
-.padding-v-md {
-    padding-top: var(--spacing-md);
-    padding-bottom: var(--spacing-md);
+.margin-v-md {
+    margin-top: var(--spacing-md);
+    margin-bottom: var(--spacing-md);
 }
 
-.padding-v-lg {
-    padding-top: var(--spacing-lg);
-    padding-bottom: var(--spacing-lg);
+.margin-v-lg {
+    margin-top: var(--spacing-lg);
+    margin-bottom: var(--spacing-lg);
 }
 
-.padding-v-xl,
-.padding-v {
-    padding-top: var(--spacing-xl);
-    padding-bottom: var(--spacing-xl);
+.margin-v-xl,
+.margin-v {
+    margin-top: var(--spacing-xl);
+    margin-bottom: var(--spacing-xl);
 }
 
 /* Top / Bottom only */
 
-.padding-top-xs {
-    padding-top: var(--spacing-xs);
+.margin-top-xs {
+    margin-top: var(--spacing-xs);
 }
-.padding-top-sm {
-    padding-top: var(--spacing-sm);
+.margin-top-sm {
+    margin-top: var(--spacing-sm);
 }
-.padding-top-md {
-    padding-top: var(--spacing-md);
+.margin-top-md {
+    margin-top: var(--spacing-md);
 }
-.padding-top-lg {
-    padding-top: var(--spacing-lg);
+.margin-top-lg {
+    margin-top: var(--spacing-lg);
 }
-.padding-top-xl,
-.padding-top {
-    padding-top: var(--spacing-xl);
+.margin-top-xl,
+.margin-top {
+    margin-top: var(--spacing-xl);
 }
 
-.padding-bottom-xs {
-    padding-bottom: var(--spacing-xs);
+.margin-bottom-xs {
+    margin-bottom: var(--spacing-xs);
 }
-.padding-bottom-sm {
-    padding-bottom: var(--spacing-sm);
+.margin-bottom-sm {
+    margin-bottom: var(--spacing-sm);
 }
-.padding-bottom-md {
-    padding-bottom: var(--spacing-md);
+.margin-bottom-md {
+    margin-bottom: var(--spacing-md);
 }
-.padding-bottom-lg {
-    padding-bottom: var(--spacing-lg);
+.margin-bottom-lg {
+    margin-bottom: var(--spacing-lg);
 }
-.padding-bottom-xl,
-.padding-bottom {
-    padding-bottom: var(--spacing-xl);
+.margin-bottom-xl,
+.margin-bottom {
+    margin-bottom: var(--spacing-xl);
 }
 
 /* Utility */
