--- a/src/style/style.css
+++ b/src/style/style.css
@@ -8,7 +8,7 @@ src/style.css
 Makabaka1880, 2025. All rights reserved.
 */
 
-@import url('padding.css');
+@import url('layout.css');
 @import url('palette.css');
 @import url('controls.css');
 
